[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vrc"
version = "1.0.99"
description="Call graph explorer tool"
readme = "README.md"
authors = [
  { name = "Paolo Bonzini", email="bonzini@gnu.org" },
]
requires-python = ">=3.9"
dependencies = [
  "compynator"
]

[project.scripts]
vrc = "vrc.cli.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests/*"

[tool.mypy]
strict = true
