[build-system]
requires = ["meson-python", "cython"]
build-backend = "mesonpy"

[project]
name = "vrc"
version = "1.0.99"
description="Call graph explorer tool"
readme = "README.md"
authors = [
  { name = "Paolo Bonzini", email="bonzini@gnu.org" },
]
requires-python = ">=3.9"
dependencies = [
  "compynator",
  "typing-extensions"
]

[project.scripts]
vrc = "vrc.cli.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests/*"
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
strict = true

[tool.mypy-tests.cython]
ignore_missing_imports = true
